--- a/index.html
+++ b/index.html
@@ -208,7 +208,25 @@
                 <li><a href="#">Phalaenopsis</a>
                     <ul>
                         <li><a href="link/phalaenopsisindex.html">Accueil</a></li>
-                        <li><a href="link/phalaenopsisindex.html#phalaenopsis">Phalaenopsis</a></li>
+                        <li><a href="link/phalaenopsisindex.html#blanchecoeurjaune">blanche coeur jaune</a></li>
+                        <li><a href="link/phalaenopsisindex.html#blanchecoeurmauve">blanche coeur mauve</a></li>
+                        <li><a href="link/phalaenopsisindex.html#column">colonne</a></li>
+                        <li><a href="link/phalaenopsisindex.html#fullersgoldenstripe">fuller's golden stripe</a></li>
+                        <li><a href="link/phalaenopsisindex.html#fullerssunset">fuller's sunset</a></li>
+                        <li><a href="link/phalaenopsisindex.html#jaune">jaune</a></li>
+                        <li><a href="link/phalaenopsisindex.html#jaunetachetee">jaune tachetée</a></li>
+                        <li><a href="link/phalaenopsisindex.html#magicart">magic art</a></li>
+                        <li><a href="link/phalaenopsisindex.html#papagayo">papagayo</a></li>
+                        <li><a href="link/phalaenopsisindex.html#petiteblanchesuspendue">petite blanche suspendue</a></li>
+                        <li><a href="link/phalaenopsisindex.html#petitemauvesuspendue">petite mauve suspendue</a></li>
+                        <li><a href="link/phalaenopsisindex.html#petiteroseclaircolonne">petite rose clair colonne</a></li>
+                        <li><a href="link/phalaenopsisindex.html#petiterosefonceecolonne">petite rose foncée colonne</a></li>
+                        <li><a href="link/phalaenopsisindex.html#purplespotted">purple spotted</a></li>
+                        <li><a href="link/phalaenopsisindex.html#rosecoeurcolore">rose coeur coloré</a></li>
+                        <li><a href="link/phalaenopsisindex.html#rosemouchetee">rose mouchetée</a></li>
+                        <li><a href="link/phalaenopsisindex.html#surfsong">surfsong</a></li>
+                        <li><a href="link/phalaenopsisindex.html#suspended">suspension</a></li>
+                        <li><a href="link/phalaenopsisindex.html#yellowcolonne">yellow colonne</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Philodendrons</a>
@@ -274,7 +292,7 @@
 <header>                                                <!--TITRES ET SOUS-TITRES BOUTONS FENÊTRES MODALES - ARROSAGES - BOUTURAGES - PARASITES - REMPOTAGES -->
     <section class="site-desc">
             <div><h1 class="title" id="top">Mes plantes</h1>
-            <p><h2 class="sub-title">Ici, je vais présenter les plantes que j'ai et aussi que j'ai eues avec une petite description de leur maintenance.</h2></p>
+            <p><h2 class="sub-title">Ici, je vais présenter les plantes que j'ai et aussi que j'ai eues avec une petite description de leur maintenance.<br/><br/>Il est possible qu'il s'y trouve une ou l'autre erreur dans les identifications ou variétés car la plupart je les ai eues sans noms et j'ai effectué des recherches moi-même mais celà n'est pas toujours évident d'identifier les espèces et variétés et il arrive que les noms soient juste commerciaux et aussi d'avoir des hybrides.</h2></p>
             <p><h2 class="sub-sub-title">Cliquez sur les images pour en savoir plus.</h2></p></div>
     </section>                                          
 <footer class="all-btn-header">
