--- a/link/phalaenopsiscolumn.html
+++ b/link/phalaenopsiscolumn.html
@@ -331,13 +331,43 @@
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- INSTALLATION FINIE -->
+    <section class="species-repotting-step">                                    <!-- PREMIÈRE PARTIE FINIE -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/phalaenopsiscolumn/25.jpg" alt="installation finie" title="installation finie"/>
+            <img class="responsive-resize" src="../assets/img/phalaenopsiscolumn/25.jpg" alt="première partie finie" title="première partie finie"/>
         </div>
         <div class="species-repotting-expl">
             <p>
                 Voilà une fois terminé d'installer les 8 Phalaenopsis en question. <br>J'ai laissé environ 30cm de grillage vide pour en rajouter par la suite et je compte peut-être aussi mettre autre chose dans le pot.
+            </p>
+        </div>
+    </section>
+    <section class="species-repotting-step">                                    <!-- CHANGEMENT POT -->
+        <div class="species-repotting-img">
+            <img class="responsive-resize" src="../assets/img/phalaenopsiscolumn/26.jpg" alt="changement pot" title="changement pot"/>
+        </div>
+        <div class="species-repotting-expl">
+            <p>
+                Ayant décidé de remplirle restant du grillage et rajouter 3 autres Phalaenopsis, il devenait trop lourd pour le pot rempli d'écorces dans lequel il se trouvait, j'ai donc décidé de mettre un pot plus profond rempli de galets.
+            </p>
+        </div>
+    </section>
+    <section class="species-repotting-step">                                    <!-- RENFORCEMENT BAS DU GRILLAGE -->
+        <div class="species-repotting-img">
+            <img class="responsive-resize" src="../assets/img/phalaenopsiscolumn/27.jpg" alt="renforcement bas grillage" title="renforcement bas grillage"/>
+        </div>
+        <div class="species-repotting-expl">
+            <p>
+                Ici, j'ai décidé d'insérer un morceau de tuyau en pvc rigide dans le grillage et de le remplir de galets afin de le rendre plus solide.
+            </p>
+        </div>
+    </section>
+    <section class="species-repotting-step">                                    <!-- INSTALLATION FINIE -->
+        <div class="species-repotting-img">
+            <img class="responsive-resize" src="../assets/img/phalaenopsiscolumn/28.jpg" alt="installation finie" title="installation finie"/>
+        </div>
+        <div class="species-repotting-expl">
+            <p>
+                Voilà une fois terminé d'installer les 3 dernières orchidées et le nouveau pot rempli de galets, plus rien ne bouge.
             </p>
         </div>
     </section>
