--- a/link/phalaenopsisgallery.html
+++ b/link/phalaenopsisgallery.html
@@ -20,20 +20,23 @@
                 <h2 class="sub-title-gallery-category">Végétaux présents ici: 
                         <a href="#blanchecoeurjaune">blanche coeur jaune,</a>
                         <a href="#blanchecoeurmauve">blanche coeur mauve,</a>
+                        <a href="#column">colonne,</a>
                         <a href="#fullersgoldenstripe">fuller's golden stripe,</a>
+                        <a href="#fullerssunset">fuller's sunset,</a>
                         <a href="#jaune">jaune,</a>
                         <a href="#jaunetachetee">jaune tachetée,</a>
                         <a href="#magicart">magic art,</a>
                         <a href="#papagayo">papagayo,</a>
                         <a href="#petiteblanchesuspendue">petite blanche suspendue,</a>
                         <a href="#petitemauvesuspendue">petite mauve suspendue,</a>
-                        <a href="#petiteroseclair">petite rose clair,</a>
-                        <a href="#petiterosefoncee">petite rose foncée,</a>
+                        <a href="#petiteroseclaircolonne">petite rose clair colonne,</a>
+                        <a href="#petiterosefonceecolonne">petite rose foncée colonne,</a>
                         <a href="#purplespotted">purple spotted,</a>
                         <a href="#rosecoeurcolore">rose coeur coloré,</a>
+                        <a href="#rosemouchetee">rose mouchetée,</a>
                         <a href="#surfsong">surfsong,</a>
                         <a href="#suspended">suspension,</a>
-                        <a href="#yellow">yellow.</a> 
+                        <a href="#yellowcolonne">yellow colonne.</a>  
                 </h2>  
         </header>
         <hr>
@@ -57,6 +60,18 @@
                 <img class="flex" src="../assets/img/phalaenopsis/gallery/blanchecoeurmauve.jpg" alt="Blanche coeur mauve" title="Blanche coeur mauve"/>
         </section>
         <hr>
+                <div class="species-title-gallery-category" id="column">Colonne
+                        <a href="phalaenopsisindex.html#column">Voir la fiche info</a>
+                </div>
+        <hr>
+        <section>                                                                <!-- COLONNE -->
+                <img class="flex" src="../assets/img/phalaenopsis/gallery/colonne(1).jpg" alt="Colonne" title="Colonne"/>
+                <img class="flex" src="../assets/img/phalaenopsis/gallery/colonne(2).jpg" alt="Colonne" title="Colonne"/>
+                <img class="flex" src="../assets/img/phalaenopsis/gallery/colonne(3).jpg" alt="Colonne" title="Colonne"/>
+                <img class="flex" src="../assets/img/phalaenopsis/gallery/colonne(4).jpg" alt="Colonne" title="Colonne"/>
+                <img class="flex" src="../assets/img/phalaenopsis/gallery/colonne(5).jpg" alt="Colonne" title="Colonne"/>
+        </section>
+        <hr>
                 <div class="species-title-gallery-category" id="fullersgoldenstripe">fullers's golden stripe
                         <a href="phalaenopsisindex.html#fullersgoldenstripe">Voir la fiche info</a>
                 </div>
@@ -66,7 +81,16 @@
                 <img class="flex" src="../assets/img/phalaenopsis/gallery/fullersgoldenstripe(2).jpg" alt="fullers's golden stripe" title="fullers's golden stripe"/>
                 <img class="flex" src="../assets/img/phalaenopsis/gallery/fullersgoldenstripe(3).jpg" alt="fullers's golden stripe" title="fullers's golden stripe"/>
                 <img class="flex" src="../assets/img/phalaenopsis/gallery/fullersgoldenstripe(4).jpg" alt="fullers's golden stripe" title="fullers's golden stripe"/>
-                <img class="flex" src="../assets/img/phalaenopsis/gallery/fullersgoldenstripe(5).jpg" alt="fullers's golden stripe" title="fullers's golden stripe"/>
+        </section>
+        <hr>
+                <div class="species-title-gallery-category" id="fullerssunset">fullers's sunset
+                        <a href="phalaenopsisindex.html#fullerssunset">Voir la fiche info</a>
+                </div>
+        <hr>
+        <section>                                                                <!-- FULLER'S SUNSET -->
+                <img class="flex" src="../assets/img/phalaenopsis/gallery/fullerssunset(1).jpg" alt="fullers's sunset" title="fullers's sunset"/>
+                <img class="flex" src="../assets/img/phalaenopsis/gallery/fullerssunset(2).jpg" alt="fullers's sunset" title="fullers's sunset"/>
+                <img class="flex" src="../assets/img/phalaenopsis/gallery/fullerssunset(3).jpg" alt="fullers's sunset" title="fullers's sunset"/>
         </section>
         <hr>
                 <div class="species-title-gallery-category" id="jaune">jaune
@@ -133,11 +157,11 @@
                 <img class="flex" src="../assets/img/phalaenopsis/gallery/petitemauvesuspendue(4).jpg" alt="petite mauve suspendue" title="petite mauve suspendue"/>
         </section>
         <hr>
-                <div class="species-title-gallery-category" id="petiteroseclair">petite rose clair
-                        <a href="phalaenopsisindex.html#petiteroseclair">Voir la fiche info</a>
+                <div class="species-title-gallery-category" id="petiteroseclaircolonne">petite rose clair colonne
+                        <a href="phalaenopsisindex.html#petiteroseclaircolonne">Voir la fiche info</a>
                 </div>
         <hr>
-        <section>                                                                <!-- PETITE ROSE CLAIR -->
+        <section>                                                                <!-- PETITE ROSE CLAIR COLONNE -->
                 <img class="flex" src="../assets/img/phalaenopsis/gallery/petiteroseclair(1).jpg" alt="petite rose clair" title="petite rose clair"/>
                 <img class="flex" src="../assets/img/phalaenopsis/gallery/petiteroseclair(2).jpg" alt="petite rose clair" title="petite rose clair"/>
                 <img class="flex" src="../assets/img/phalaenopsis/gallery/petiteroseclair(3).jpg" alt="petite rose clair" title="petite rose clair"/>
@@ -145,11 +169,11 @@
                 <img class="flex" src="../assets/img/phalaenopsis/gallery/petiteroseclair(5).jpg" alt="petite rose clair" title="petite rose clair"/>
         </section>
         <hr>
-                <div class="species-title-gallery-category" id="petiterosefoncee">petite rose foncée
-                        <a href="phalaenopsisindex.html#petiterosefoncee">Voir la fiche info</a>
+                <div class="species-title-gallery-category" id="petiterosefonceecolonne">petite rose foncée colonne
+                        <a href="phalaenopsisindex.html#petiterosefonceecolonne">Voir la fiche info</a>
                 </div>
         <hr>
-        <section>                                                                <!-- PETITE ROSE FONCÉE -->
+        <section>                                                                <!-- PETITE ROSE FONCÉE COLONNE -->
                 <img class="flex" src="../assets/img/phalaenopsis/gallery/petiterosefoncee(1).jpg" alt="petite rose foncée" title="petite rose foncée"/>
                 <img class="flex" src="../assets/img/phalaenopsis/gallery/petiterosefoncee(2).jpg" alt="petite rose foncée" title="petite rose foncée"/>
                 <img class="flex" src="../assets/img/phalaenopsis/gallery/petiterosefoncee(3).jpg" alt="petite rose foncée" title="petite rose foncée"/>
@@ -178,6 +202,16 @@
                 <img class="flex" src="../assets/img/phalaenopsis/gallery/rosecoeurcolore(5).jpg" alt="rose coeur coloré" title="rose coeur coloré"/>
         </section>
         <hr>
+                <div class="species-title-gallery-category" id="rosemouchetee">rose mouchetée
+                        <a href="phalaenopsisindex.html#rosemouchetee">Voir la fiche info</a>
+                </div>
+        <hr>
+        <section>                                                                <!-- ROSE MOUCHETÉE -->
+                <img class="flex" src="../assets/img/phalaenopsis/gallery/rosemouchetee(1).jpg" alt="rose mouchetée" title="rose mouchetée"/>
+                <img class="flex" src="../assets/img/phalaenopsis/gallery/rosemouchetee(2).jpg" alt="rose mouchetée" title="rose mouchetée"/>
+                <img class="flex" src="../assets/img/phalaenopsis/gallery/rosemouchetee(3).jpg" alt="rose mouchetée" title="rose mouchetée"/>
+        </section>
+        <hr>
                 <div class="species-title-gallery-category" id="surfsong">surfsong
                         <a href="phalaenopsisindex.html#surfsong">Voir la fiche info</a>
                 </div>
@@ -201,11 +235,11 @@
                 <img class="flex" src="../assets/img/phalaenopsis/gallery/suspendue(4).jpg" alt="phalaenopsis suspension" title="phalaenopsis suspension"/>
         </section>
         <hr>
-                <div class="species-title-gallery-category" id="yellow">yellow
-                        <a href="phalaenopsisindex.html#yellow">Voir la fiche info</a>
+                <div class="species-title-gallery-category" id="yellowcolonne">yellow colonne
+                        <a href="phalaenopsisindex.html#yellowcolonne">Voir la fiche info</a>
                 </div>
         <hr>
-        <section>                                                                <!-- YELLOW -->
+        <section>                                                                <!-- YELLOW COLONNE -->
                 <img class="flex" src="../assets/img/phalaenopsis/gallery/yellow(1).jpg" alt="yellow" title="yellow"/>
                 <img class="flex" src="../assets/img/phalaenopsis/gallery/yellow(2).jpg" alt="yellow" title="yellow"/>
                 <img class="flex" src="../assets/img/phalaenopsis/gallery/yellow(3).jpg" alt="yellow" title="yellow"/>
