--- a/modal.html
+++ b/modal.html
@@ -30,6 +30,8 @@
                                             &nbsp;&nbsp;_Ajout
                                             <a href="link/phalaenopsisindex.html" alt="phalaenopsis" title="phalaenopsis"><strong>de plusieurs variétés de Phalaenopsis</strong></a> (Mes Phalaenopsis).<br/>
                                             &nbsp;&nbsp;_Ajout 
+                                            <a href="link/phalaenopsisindex.html#column" alt="phalaenopsis colonne" title="phalaenopsis colonne"><strong>Phalaenopsis colonne</strong></a> (Mes Phalaenopsis).<br/>
+                                            &nbsp;&nbsp;_Ajout 
                                             <a href="link/phalaenopsisindex.html#suspended" alt="phalaenopsis suspension" title="phalaenopsis suspension"><strong>Phalaenopsis suspension</strong></a> (Mes Phalaenopsis).<br/>
                                             &nbsp;&nbsp;_Ajout d'un lien vers une vidéo ou je montre comment j'arrose abondamment mes <a class="species-repotting-info" href="link/phalaenopsisindex.html#suspended4" alt="Installation phalaenopsis en colonne" title="Installation phalaenopsis en colonne"><strong>Phalaenopsis en suspension en été.</strong></a>
                                         </div>
