--- a/index.html
+++ b/index.html
@@ -291,9 +291,24 @@
 </section>
 <header>                                                <!--TITRES ET SOUS-TITRES BOUTONS FENÊTRES MODALES - ARROSAGES - BOUTURAGES - PARASITES - REMPOTAGES -->
     <section class="site-desc">
-            <div><h1 class="title" id="top">Mes plantes</h1>
-            <p><h2 class="sub-title">Ici, je vais présenter les plantes que j'ai et aussi que j'ai eues avec une petite description de leur maintenance.<br/><br/>Il est possible qu'il s'y trouve une ou l'autre erreur dans les identifications ou variétés car la plupart je les ai eues sans noms et j'ai effectué des recherches moi-même mais celà n'est pas toujours évident d'identifier les espèces et variétés et il arrive que les noms soient juste commerciaux et aussi d'avoir des hybrides.</h2></p>
-            <p><h2 class="sub-sub-title">Cliquez sur les images pour en savoir plus.</h2></p></div>
+        <div><h1 class="title" id="top">Mes plantes
+        </h1>
+            <p>
+                <h2 class="sub-title">
+                    Ici, je vais présenter les plantes que j'ai et aussi que j'ai eues avec une petite description de leur maintenance.
+                </h2>
+            </p>
+            <p>
+                <h3><br/>
+                    Il est possible qu'il s'y trouve une ou l'autre erreur dans les identifications ou variétés car la plupart je les ai eues sans noms et j'ai effectué des recherches moi-même mais celà n'est pas toujours évident d'identifier les espèces et variétés et il arrive que les noms soient juste commerciaux et aussi d'avoir des hybrides.
+                </h3>
+            </p>
+            <p>
+                <h2 class="sub-sub-title">
+                    Cliquez sur les images pour en savoir plus.
+                </h2>
+            </p>
+        </div>
     </section>                                          
 <footer class="all-btn-header">
         <section class="modal-window">
@@ -309,6 +324,7 @@
                 <button class="btn-nav-header nav-repotting"><a href="link/repottingindex.html" alt="En savoir plus sur mes rempotages" title="En savoir plus sur mes rempotages">Rempotages</a></button>
                 -->
                 <button class="btn-nav-header nav-phalaenopsis-column"><a href="link/phalaenopsiscolumn.html" alt="Comment j'installe des phalaenopsis en colonne" title="Comment j'installe des phalaenopsis en colonne" >Installation phalaenopsis en colonne</a></button>
+                <button class="btn-nav-header nav-phalaenopsis-suspended"><a href="link/phalaenopsissuspended.html" alt="Comment j'installe des phalaenopsis en suspension" title="Comment j'installe des phalaenopsis en suspension" >Installation phalaenopsis en suspension</a></button>
                 <button class="btn-nav-header nav-install-tillandsia"><a href="link/installtillandsia.html" alt="Comment j'accroche mes Tillandsia" title="Comment j'accroche mes Tillandsia" >Accrochage Tillandsia</a></button>
         </section>
 </footer>
@@ -316,7 +332,7 @@
         <hr><hr>
 <main>                                                  <!-- CATÉGORIES DE PLANTES -->
 <section class="category-plant">                        <!-- ADENIUM -->
-  <button class="category-plant-title"><div class="category"><div class="category-out">Mes Adenium</div><div class="category-in">Cliquez sur l'image pour en savoir plus</div></div><a href="link/adeniumindex.html">
+  <button class="category-plant-title"><div class="category"><div class="category-out">Adenium</div><div class="category-in">Cliquez sur l'image pour en savoir plus</div></div><a href="link/adeniumindex.html">
     <img class="resize" src="assets/img/welcome/species/adenium.jpg" alt="En savoir plus sur mes Adenium" title="En savoir plus sur mes Adenium" onmouseover="javascript:this.src='assets/img/welcome/species/adenium2.jpg';"onmouseout="javascript:this.src='assets/img/welcome/species/adenium.jpg';"/></a></button>
 </section>
 <section class="category-plant">                        <!-- ALOCASIA -->
