--- a/link/phalaenopsiscolumn.html
+++ b/link/phalaenopsiscolumn.html
@@ -15,8 +15,8 @@
             <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter les Phalaenopsis en colonne en créant un substrat adapté à partir de plusieurs éléments avec un tuteur fabriqué par moi-même avec du matériel trainant dans ma cave. Toutes ces Phalaenopsis sont issues d'un sauvetage ou j'ai décidé de toutes les mettre ensemble. <br>Celà n'est pas conseillé de le faire durant cette période car une partie est encore en cours de floraison mais, celà n'est pas grave et n'aura aucne incidence sur la floraison. J'ai volontairement mit un terme plus tôt aux floraisons les plus faibles.</h2></p></div>
         </section>  
                 <section class="nav-button">
-                    <button class="styled-btn-index"><a href="orchidsindex.html#planifolia">Fiche info de mes Phalaenopsis en colonne</a></button>
-                    <button class="styled-btn-gallery"><a href="orchidsgallery.html#planifolia">Galerie photos de mes Phalaenopsis en colonne</a></button>
+                    <button class="styled-btn-index"><a href="phalaenopsisindex.html#column">Fiche info de mes Phalaenopsis en colonne</a></button>
+                    <button class="styled-btn-gallery"><a href="phalaenopsisgallery.html#column">Galerie photos de mes Phalaenopsis en colonne</a></button>
                     <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
                 </section>
     </header>
