--- a/link/phalaenopsisindex.html
+++ b/link/phalaenopsisindex.html
@@ -520,6 +520,7 @@
         <div class="index-category-tab-content" id="suspended5" hidden="hidden">Je diminue les fréquences d'arrosage en veillant juste à ce que le substrat reste humide. <br>Toujours au-dessus de la baignoire pour l'eau qui égoutte. <br>Et aussi par vaporisation des racines.
         </div>
         <div class="index-category-tab-content" id="suspended6" hidden="hidden">Je prépare un mélange d'écorces de pin. <br/> Je les garde en suspension dans une demi sphère faite avec du grillage. <br/> 2 se trouvent sur le haut et 2 sur les côtés.
+          <a class="species-repotting-info" href="phalaenopsissuspended.html" alt="création suspension en grillage pour orchidées" title="création suspension en grillage pour orchidées">Voir comment j'ai pratiqué pour la création d'une suspension en grillage pour orchidées</a>
         </div>
       </section>
         <hr>
