--- a/modal.html
+++ b/modal.html
@@ -33,7 +33,8 @@
                                             <a href="link/phalaenopsisindex.html#column" alt="phalaenopsis colonne" title="phalaenopsis colonne"><strong>Phalaenopsis colonne</strong></a> (Mes Phalaenopsis).<br/>
                                             &nbsp;&nbsp;_Ajout 
                                             <a href="link/phalaenopsisindex.html#suspended" alt="phalaenopsis suspension" title="phalaenopsis suspension"><strong>Phalaenopsis suspension</strong></a> (Mes Phalaenopsis).<br/>
-                                            &nbsp;&nbsp;_Ajout d'un lien vers une vidéo ou je montre comment j'arrose abondamment mes <a class="species-repotting-info" href="link/phalaenopsisindex.html#suspended4" alt="Installation phalaenopsis en colonne" title="Installation phalaenopsis en colonne"><strong>Phalaenopsis en suspension en été.</strong></a>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant Comment j'installe des <a class="species-repotting-info" href="link/phalaenopsissuspended.html" alt="Installation phalaenopsis en suspension" title="Installation phalaenopsis en suspension"><strong>Phalaenopsis en suspension.</strong></a><br>
+                                            &nbsp;&nbsp;_Ajout d'un lien vers une vidéo montrant comment j'arrose abondamment mes <a class="species-repotting-info" href="link/phalaenopsisindex.html#suspended4" alt="Installation phalaenopsis en colonne" title="Installation phalaenopsis en colonne"><strong>Phalaenopsis en suspension en été.</strong></a>
                                         </div>
                                     </div>
                                 </li> 
@@ -43,7 +44,7 @@
                                     </div>
                                     <div class="modal-desc-flex">
                                         <div>
-                                            &nbsp;&nbsp;_Ajout d'une page expliquant Comment j'installe des phalaenopsis en colonne <a class="species-repotting-info" href="link/phalaenopsiscolumn.html" alt="Installation phalaenopsis en colonne" title="Installation phalaenopsis en colonne"><strong>Phalaenopsis en colonne.</strong></a>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant Comment j'installe des <a class="species-repotting-info" href="link/phalaenopsiscolumn.html" alt="Installation phalaenopsis en colonne" title="Installation phalaenopsis en colonne"><strong>Phalaenopsis en colonne.</strong></a>
                                         </div>
                                     </div>
                                 </li> 
